# translation_service

./: .dockerignore  .gitignore  .python-version  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
configs/: .env.base.yaml  .env.test.yaml
scripts/: stats.sh
src/api/: app.py  context.py  main.py  middlewares.py
src/api/router/: __init__.py  healthcheck.py
src/api/router/v1/: __init__.py  translations.py
src/application/translation/: service.py
src/domain/translation/: provider.py  repo.py  translation.py
src/infra/provider/: google_web.py
src/infra/provider/google/: google_api_async.py
src/infra/provider/google/web/: constants.py  gtoken.py  models.py  provider.py  translator.py  urls.py
src/infra/repositories/mongodb/: configuration.py  repository.py
src/infra/repositories/translation/: elastic.py  mongodb.py  repo.py
src/infra/translation/: google.py
src/utils/: configs.py  enums.py  logs.py
src/utils/configs/: app_config.py  env_config.py
tests/: conftest.py
tests/application/translation/: conftest.py  test_service.py
tests/infra/provider/: test_google_web_provider.py
tests/infra/translation/: conftest.py  test_mongodb_translation_service.py
tests/integration/api/: test_api.py  translation_challenge.json
tests/integration/api/data/: challenge.json  chance.json  hello.json  string.json  translate.json
