[tool.poetry]
name = "translation-service"
version = "0.1.0"
description = ""
authors = ["zexxonn <zexxonn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
aiohttp = "^3.8.4"
motor = "^3.1.2"
uvloop = "^0.17.0"
omegaconf = "^2.3.0"
coloredlogs = "^15.0.1"
uvicorn = "^0.22.0"
httpx = {extras = ["http2"], version = "^0.24.1"}
tenacity = "^8.2.2"
pytest-mock = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
motor-types = "^1.0.0b2"
deepdiff = "^6.3.0"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "2.0"
addopts = ""
python_files = ["test_*.py", "*_test.py"]
python_classes = ["*Test", "Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
pythonpath = "."
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
asyncio_mode = "auto"
